--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,9 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Home">
   <div class="flex justify-center">
-    <div class="mt-48 max-w-2xl">
+    <div
+      class="mt-48 max-w-2xl rounded-lg p-5 transition-all hover:bg-black/90"
+    >
       <h1 class="text-center font-VIBEFEST text-4xl font-bold">
         VIBEFEST - VOLUME IV
       </h1>
