--- a/src/layouts/ArtistBioLayout.astro
+++ b/src/layouts/ArtistBioLayout.astro
@@ -7,7 +7,7 @@ const { frontmatter } = Astro.props;
 <Layout title={`${frontmatter.title} - VIBEFEST Artist`}>
   <div class="flex justify-center">
     <div
-      class="mt-48 mb-48 max-w-2xl rounded-lg p-5 transition-all hover:bg-black/90"
+      class="mt-48 mb-48 max-w-2xl rounded-lg bg-black/90 p-5 backdrop-blur-sm backdrop-saturate-200 transition-all"
     >
       <div class="mb-5 text-center">
         <Link href="/artists">← Back to Artists</Link>
