--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Home">
   <div class="flex justify-center">
     <div
-      class="mt-48 max-w-2xl rounded-lg p-5 transition-all hover:bg-black/90"
+      class="mt-48 max-w-2xl rounded-lg bg-black/90 p-5 backdrop-blur-sm backdrop-saturate-200 transition-all"
     >
       <h1 class="text-center font-VIBEFEST text-4xl font-bold">
         VIBEFEST - VOLUME IV
