--- a/src/pages/artists.astro
+++ b/src/pages/artists.astro
@@ -12,7 +12,7 @@ const allPosts = await Astro.glob("./artists/*.md");
 >
   <div class="flex justify-center">
     <div
-      class="mt-48 mb-48 max-w-2xl rounded-lg p-5 transition-all hover:bg-black/90"
+      class="mt-48 mb-48 max-w-2xl rounded-lg bg-black/90 p-5 backdrop-blur-sm backdrop-saturate-200 transition-all"
     >
       <div class="mb-5 text-center">
         <Link href="/">← Back to Home</Link>
