--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,12 +14,12 @@ const { title, description } = Astro.props as Props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="stylesheet" href="/global.css" />
-    <title>{title ? `VIBEFEST - ${title}` : "VIBEFEST"}</title>
+    <title>{title ? `${title} - VIBEFEST` : "VIBEFEST"}</title>
 
     <!-- SEO -->
     <meta
       property="og:title"
-      content={title ? `VIBEFEST - ${title}` : "VIBEFEST"}
+      content={title ? `${title} - VIBEFEST` : "VIBEFEST"}
     />
     <meta property="og:image" content="/images/VibefestFlower.png" />
     <meta property="og:locale" content="en_US" />
@@ -32,7 +32,7 @@ const { title, description } = Astro.props as Props;
     <meta name="twitter:site" content="@VIBEFEST22" />
     <meta
       name="twitter:title"
-      content={title ? `VIBEFEST - ${title}` : "VIBEFEST"}
+      content={title ? `${title} - VIBEFEST` : "VIBEFEST"}
     />
     <meta name="twitter:description" content={description ?? "VIBEFEST"} />
     <meta name="twitter:image" content="/images/VibefestFlower.png" />
