--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -86,6 +86,17 @@ const { title, description } = Astro.props as Props;
 
       window.ontouchmove = (e) => handleOnMove(e.touches[0]);
     </script>
+    <script>
+      import { webVitals } from "../lib/vitals";
+      let analyticsId = import.meta.env.PUBLIC_VERCEL_ANALYTICS_ID;
+      if (analyticsId) {
+        webVitals({
+          path: location.pathname,
+          params: location.search,
+          analyticsId,
+        });
+      }
+    </script>
     <slot />
     <!-- repeat this for every image up to 22 -->
     <img
