start artist media

--- a/src/layouts/ArtistBioLayout.astro
+++ b/src/layouts/ArtistBioLayout.astro
@@ -41,7 +41,7 @@ const { frontmatter } = Astro.props;
 
       <hr class="mt-10" />
       <div
-        class="prose prose-invert mt-10 max-w-6xl prose-a:text-white prose-a:underline prose-a:transition-all hover:prose-a:rounded hover:prose-a:bg-white hover:prose-a:p-0.5 hover:prose-a:text-black hover:prose-a:no-underline lg:prose-xl"
+        class="prose prose-invert mt-10 max-w-6xl transition-all prose-a:text-white prose-a:underline prose-a:transition-all hover:prose-a:rounded hover:prose-a:bg-white hover:prose-a:p-0.5 hover:prose-a:text-black hover:prose-a:no-underline prose-img:rounded-lg prose-img:border-2 prose-img:border-solid prose-img:border-white prose-img:p-3 prose-img:transition-all hover:prose-img:bg-neutral-500 hover:prose-img:p-5 lg:prose-xl"
       >
         <slot />
       </div>
