--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
       class="mt-48 max-w-2xl rounded-lg bg-black/90 p-5 backdrop-blur-sm backdrop-saturate-200 transition-all"
     >
       <h1 class="text-center font-VIBEFEST text-4xl font-bold">
-        VIBEFEST - VOLUME IV
+        VIBEFEST
       </h1>
       <p class="mt-4 text-center font-VIBEFEST text-lg">
         <Link href="https://vrc.group/VIBE.9162">IN VRCHAT</Link> AND <Link
@@ -24,14 +24,10 @@ import Layout from "../layouts/Layout.astro";
           JOIN OUR VRCHAT GROUP: VIBE.9162
         </Link>
         <br />
-        <Link href="https://shop.vibefest.live">BUY THE CHARITY MERCH</Link>
+        <Link href="https://shop.vibefest.net">BUY THE CHARITY MERCH</Link>
         <br />
         <Link href="/artists">SEE THE ARTISTS</Link>
       </p>
-      <iframe
-        src="https://radio.vibefest.live/public/radio_vibefest/embed?theme=dark"
-        title="Radio Vibefest. embed"
-        class="mt-5 min-h-[150px] w-full border-0"></iframe>
     </div>
   </div>
 </Layout>
